0032649: Bug in BRepLib::EnsureNormalConsistency()

Fix a typo in variable name.